Update message in pruebas.html with new content

--- a/pruebas/templates/pruebas/pruebas.html
+++ b/pruebas/templates/pruebas/pruebas.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <h1>Pruebas</h1>
-    <p>{{ mensaje }}</p>
+    <p>{{ Hola Mi Nombre es Gabreil Blanco
+      Estudiante De UNITECNAR En La Direccion De 
+      Programa FACI}}</p>
   </body>
  </html>
