--- a/pruebas/templates/pruebas/index.html
+++ b/pruebas/templates/pruebas/index.html
@@ -14,6 +14,7 @@
       footer { color:#666; text-align:center; margin:40px 0 }
     </style>
     <link rel="stylesheet" href="{% static 'pruebas/styles.css' %}">
+    <script src="{% static 'pruebas/script.js' %}" defer></script>
   </head>
   <body>
     <header>
